--- a/PEngine/PEngine.csproj
+++ b/PEngine/PEngine.csproj
@@ -5,4 +5,7 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Remove="NUnitTestPromotionProj.csproj" />
+  </ItemGroup>
 </Project>
