[+] adding test [+] adding solution

--- a/Promotion.Test/Promotion.Test.csproj
+++ b/Promotion.Test/Promotion.Test.csproj
@@ -22,4 +22,7 @@
   <ItemGroup>
     <Compile Remove="SkuTests.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\PEngine\PEngine.csproj" />
+  </ItemGroup>
 </Project>
